--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
                 <source src="Video/My Video.mp4" type="video/mp4">
             </video>
         </section>
-
+        <section>
+            <h3>Calcoletor</h3>
+            <input type="number" name="" id="firstnumber">+
+            <input type="number" name="" id="secondnumber"> = <strong id="result"></strong>
+        </section>
         <footer style="background-color: black; color: white; padding: 20px; ">
             <h3 style="margin-left: 10px; color: white;">Top Links</h3>
             <ol type="1">
@@ -73,6 +77,12 @@
             </ol>
             <p style="text-align: center;">&copy; 2022 All Right Reserved</p>
         </footer>
+        <script>
+            var number1 = parseInt(document.getElementById('firstnumber').value) 
+            var number2 = parseInt(document.getElementById('secondnumber').value) 
+            var result = document.getElementById('result')
+            
+        </script>
 </body>
 
 </html>
