--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 
 <body style="background-color: gray; margin: 0; padding: 0;">
     <header>
-        <h2><a href="index.html" style="text-decoration: none;"><img src="" alt="Our Site Logo"></a></h2>
+        <h2><a href="index.html" style="text-decoration: none;"><img src="" alt="Our Site Logo" width="30" height="10"></a></h2>
         <ul style="list-style-type: none; display: block; text-align: right;">
             <li style="display:inline-block;"><a href="index.html">Home</a></li>
             <li style="display:inline-block;"><a href="about.html">About Us</a></li>
@@ -20,14 +20,14 @@
     </header>
     <section style="padding: 20px;">
         <form action="" method="post" style="line-height:1.5; padding-left: 20px; margin-bottom: 20px;">
-            <label for="">Your Name</label><br />
-            <input type="text"> <br />
-            <label for="">Your Email</label><br />
-            <input type="email" name="" id=""><br />
-            <label for="">Subject</label><br />
-            <input type="text" name="" id=""><br />
-            <label for="">Massege</label><br />
-            <textarea name="" id="" cols="30" rows="10">Massege</textarea><br />
+            <label for="yourname">Your Name</label><br />
+            <input type="text" id="yourname"> <br />
+            <label for="youremail">Your Email</label><br />
+            <input type="email" name="" id="youremail"><br />
+            <label for="subject">Subject</label><br />
+            <input type="text" name="" id="subject"><br />
+            <label for="massege">Massege</label><br />
+            <textarea name="" id="massege" cols="30" rows="10">Massege</textarea><br />
             <button type="submit">Send</button>
         </form>
     </section>
