--- a/gallery.html
+++ b/gallery.html
@@ -1,51 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,">
-    <title>Gallery</title>
-</head>
+        <head>
+                <title>My Gallery</title>
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <meta name="description" content="My class practice website" />
+                <meta name="keywords" content="turorial, html, css, seo, php, javascript" />
+                <meta name="author" content="Md. Fayezullah" />
+                <link rel="canonical" href="http://127.0.0.1:5500/index.html" />
+                <meta name="robots" content="index, follow" />
+                
+                <!--  Essential Social Meta Tags -->
+                <meta property="og:title" content="My Class" />
+                <meta property="og:description" content="My class practice website" />
+                <meta property="og:image" content="http://127.0.0.1:5500/index.html" />
+                <meta property="og:url" content="http://127.0.0.1:5500/index.html" />
+                <meta property="twitter:card" content="http://127.0.0.1:5500/index.html" />
+                <meta property="og:site_name" content="My Class" />
+                <meta property="twitter:image:alt" content="My Class" />
+            </head>
 
 <body style="background-color: gray; margin: 0; padding: 0;">
-    <header style="padding: 20px;">
-        <h2><a href="index.html" style="text-decoration: none;"><img src="" alt="Our Site Logo"></a></h2>
-        <ul style="list-style-type: none; display: block; text-align: right;">
-            <li style="display:inline-block;"><a href="index.html">Home</a></li>
-            <li style="display:inline-block;"><a href="about.html">About Us</a></li>
-            <li style="display:inline-block;"><a href="contact.html">Contact Us</a></li>
-            <li style="display:inline-block;"><a href="gallery.html">Gallery</a></li>
-        </ul>
-    </header>
+        <header style="padding: 20px;">
+                <h2><a href="index.html" style="text-decoration: none;"><img src="" alt="Our Site Logo"></a></h2>
+                <ul style="list-style-type: none; display: block; text-align: right;">
+                        <li style="display:inline-block;"><a href="index.html">Home</a></li>
+                        <li style="display:inline-block;"><a href="about.html">About Us</a></li>
+                        <li style="display:inline-block;"><a href="contact.html">Contact Us</a></li>
+                        <li style="display:inline-block;"><a href="gallery.html">Gallery</a></li>
+                </ul>
+        </header>
 
         <section style="padding: 20px;">
-            <a href="gallery.html" style="text-decoration: none; text-align: center;">
-                <h3>Our Gallery</h3>
-            </a>
-            <div>
-                <a href=""><img src="Images/Bronx Colors LipColor - LC314-deshibazaarbd.jpg" alt="" width="300"
-                        srcset=""></a>
-                <a href=""><img src="Images/Bronx Colors Magnetic Urban Brushes - UBRSET02-deshibazaarbd.jpg" alt=""
-                        width="300" srcset=""></a>
-                <a href=""><img src="Images/Bronx Colors Metallic Cream Eyeshadow - MCE05-deshibazaarbd.jpg" alt=""
-                        width="300" srcset=""></a>
-                <a href=""><img src="Images/Bronx Colors Metallic Cream Eyeshadow - MCE16-deshibazaarbd.jpg" alt=""
-                        width="300" srcset=""></a>
-                <a href=""><img src="Images/Bronx Colors Studioline HD TV Foundation - HDTV02-deshibazaarbd.jpg" alt=""
-                        width="300" srcset=""></a>
-                <a href=""><img src="Images/Bronx Colors LipColor - LC314-deshibazaarbd.jpg" alt="" width="300"
-                        srcset=""></a>
-                <a href=""><img src="Images/Bronx Colors Magnetic Urban Brushes - UBRSET02-deshibazaarbd.jpg" alt=""
-                        width="300" srcset=""></a>
-                <a href=""><img src="Images/Bronx Colors Metallic Cream Eyeshadow - MCE05-deshibazaarbd.jpg" alt=""
-                        width="300" srcset=""></a>
-                <a href=""><img src="Images/Bronx Colors Metallic Cream Eyeshadow - MCE16-deshibazaarbd.jpg" alt=""
-                        width="300" srcset=""></a>
-                <a href=""><img src="Images/Bronx Colors Studioline HD TV Foundation - HDTV02-deshibazaarbd.jpg" alt=""
-                        width="300" srcset=""></a>
-            </div>
-            <!-- <div>
+                <a href="gallery.html" style="text-decoration: none; text-align: center;">
+                        <h3>Our Gallery</h3>
+                </a>
+                <div>
+                        <a href=""><img src="Images/Bronx Colors LipColor - LC314-deshibazaarbd.jpg" alt="" width="300"
+                                        srcset=""></a>
+                        <a href=""><img src="Images/Bronx Colors Magnetic Urban Brushes - UBRSET02-deshibazaarbd.jpg"
+                                        alt="" width="300" srcset=""></a>
+                        <a href=""><img src="Images/Bronx Colors Metallic Cream Eyeshadow - MCE05-deshibazaarbd.jpg"
+                                        alt="" width="300" srcset=""></a>
+                        <a href=""><img src="Images/Bronx Colors Metallic Cream Eyeshadow - MCE16-deshibazaarbd.jpg"
+                                        alt="" width="300" srcset=""></a>
+                        <a href=""><img src="Images/Bronx Colors Studioline HD TV Foundation - HDTV02-deshibazaarbd.jpg"
+                                        alt="" width="300" srcset=""></a>
+                        <a href=""><img src="Images/Bronx Colors LipColor - LC314-deshibazaarbd.jpg" alt="" width="300"
+                                        srcset=""></a>
+                        <a href=""><img src="Images/Bronx Colors Magnetic Urban Brushes - UBRSET02-deshibazaarbd.jpg"
+                                        alt="" width="300" srcset=""></a>
+                        <a href=""><img src="Images/Bronx Colors Metallic Cream Eyeshadow - MCE05-deshibazaarbd.jpg"
+                                        alt="" width="300" srcset=""></a>
+                        <a href=""><img src="Images/Bronx Colors Metallic Cream Eyeshadow - MCE16-deshibazaarbd.jpg"
+                                        alt="" width="300" srcset=""></a>
+                        <a href=""><img src="Images/Bronx Colors Studioline HD TV Foundation - HDTV02-deshibazaarbd.jpg"
+                                        alt="" width="300" srcset=""></a>
+                </div>
+                <!-- <div>
         <a href=""><img src="Images/Bronx Colors LipColor - LC314-deshibazaarbd.jpg" alt="" width="200" srcset=""></a>
         <a href=""><img src="Images/Bronx Colors Magnetic Urban Brushes - UBRSET02-deshibazaarbd.jpg" alt="" width="200" srcset=""></a>
         <a href=""><img src="Images/Bronx Colors Metallic Cream Eyeshadow - MCE05-deshibazaarbd.jpg" alt="" width="200" srcset=""></a>
@@ -53,17 +65,23 @@
         <a href=""><img src="Images/Bronx Colors Studioline HD TV Foundation - HDTV02-deshibazaarbd.jpg" alt="" width="200" srcset=""></a>
        </div> -->
         </section>
-  
+
 
         <footer style="background-color: black; color: white; padding: 20px; ">
-            <h3 style="margin-left: 10px; color: white;">Top Links</h3>
-            <ol type="1">
-                <li><a style="text-decoration: none; color: white;" href="index.html">Home</a></li>
-                <li><a style="text-decoration: none; color: white;" href="about.html">About Us</a></li>
-                <li><a style="text-decoration: none; color: white;" href="contact.html">Contact Us</a></li>
-                <li><a style="text-decoration: none; color: white;" href="gallery.html">Gallery</a></li>
-            </ol>
-            <p style="text-align: center;">&copy; 2022 All Right Reserved</p>
+                <h3 style="margin-left: 10px; color: white;">Top Links</h3>
+                <nav>
+                        <ol type="1">
+                                <li><a style="text-decoration: none; color: white;" href="index.html">Home</a></li>
+                                <li><a style="text-decoration: none; color: white;" href="about.html">About Us</a></li>
+                                <li><a style="text-decoration: none; color: white;" href="contact.html">Contact Us</a>
+                                </li>
+                                <li><a style="text-decoration: none; color: white;" href="gallery.html">Gallery</a></li>
+                                <li><a style="text-decoration: none; color: white;"
+                                                href="calcolator.html">Calculator</a></li>
+
+                        </ol>
+                </nav>
+                <p style="text-align: center;">&copy; 2022 All Right Reserved.</p>
         </footer>
 </body>
 
