--- a/about.html
+++ b/about.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-</head>
+    <head>
+        <title>About</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="My About practice website" />
+        <meta name="keywords" content="turorial, html, css, seo, php, javascript" />
+        <meta name="author" content="Md. Fayezullah" />
+        <link rel="canonical" href="http://127.0.0.1:5500/About.html" />
+        <meta name="robots" content="About, follow" />
+        
+        <!--  Essential Social Meta Tags -->
+        <meta property="og:title" content="About" />
+        <meta property="og:description" content="My About practice website" />
+        <meta property="og:image" content="http://127.0.0.1:5500/About.html" />
+        <meta property="og:url" content="http://127.0.0.1:5500/About.html" />
+        <meta property="twitter:card" content="http://127.0.0.1:5500/About.html" />
+        <meta property="og:site_name" content="My About" />
+        <meta property="twitter:image:alt" content="My About" />
+    </head>
 
-<body style="background-color: gray; margin: 0; padding: 0;">
-    <header>
-        <h2><a href="index.html" style="text-decoration: none;"><img src="" alt="Our Site Logo"></a></h2>
-        <ul style="list-style-type: none; display: block; text-align: right;">
-            <li style="display:inline-block;"><a href="index.html">Home</a></li>
-            <li style="display:inline-block;"><a href="about.html">About Us</a></li>
-            <li style="display:inline-block;"><a href="contact.html">Contact Us</a></li>
-            <li style="display:inline-block;"><a href="gallery.html">Gallery</a></li>
-        </ul>
+<body style="background-color:rgb(39, 41, 40); margin: 0; padding: 0;">
+    <header style="padding: 20px;">
+        <h1><a href="index.html" style="text-decoration: none; color: aliceblue;"><img src="" alt="Our Site Logo" style="width: 100px; height: 30px;"></a></h1>
+        <nav>
+            <ul style="list-style-type: none; display: block; text-align: right;">
+                <li style="display:inline-block;"><a style="color: white;" href="index.html">Home</a></li>
+                <li style="display:inline-block;"><a style="color: white;" href="about.html">About Us</a></li>
+                <li style="display:inline-block;"><a style="color: white;" href="contact.html">Contact Us</a></li>
+                <li style="display:inline-block;"><a style="color: white;" href="gallery.html">Gallery</a></li>
+                <li style="display:inline-block;"><a style="color: white;" href="calculator.html">Calculator</a></li>
+            </ul>
+        </nav>
     </header>
-    <section style="padding: 20px;">
+    <section style="padding: 20px; color: white;">
         <h2>History</h2>
         <p style="text-align: justify;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo magnam
             reprehenderit earum corporis ratione quo similique. Officia quos possimus fugit facere ducimus, tempora
@@ -70,15 +85,19 @@
 
     </section>
 
-    <footer style="background-color: black; color: white; position: fixed; left: 0; bottom: 0; width: 100%;">
+    <footer style="background-color: black; color: white; padding: 20px; ">
         <h3 style="margin-left: 10px; color: white;">Top Links</h3>
-        <ol type="1">
-            <li><a style="text-decoration: none; color: white;" href="index.html">Home</a></li>
-            <li><a style="text-decoration: none; color: white;" href="about.html">About Us</a></li>
-            <li><a style="text-decoration: none; color: white;" href="contact.html">Contact Us</a></li>
-            <li><a style="text-decoration: none; color: white;" href="gallery.html">Gallery</a></li>
-        </ol>
-        <p style="text-align: center;">&copy; 2022 All Right Reserved</p>
+        <nav >
+            <ol type="1" >
+                <li><a style="text-decoration: none; color: white;" href="index.html">Home</a></li>
+                <li><a style="text-decoration: none; color: white;" href="about.html">About Us</a></li>
+                <li><a style="text-decoration: none; color: white;" href="contact.html">Contact Us</a></li>
+                <li><a style="text-decoration: none; color: white;" href="gallery.html">Gallery</a></li>
+                <li><a style="text-decoration: none; color: white;" href="calcolator.html">Calculator</a></li>
+            
+            </ol>
+        </nav>
+        <p style="text-align: center;">&copy; 2022 All Right Reserved.</p>
     </footer>
 </body>
 
