--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-</head>
+    <head>
+        <title>My Contact</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="My Contact practice website" />
+        <meta name="keywords" content="turorial, html, css, seo, php, javascript" />
+        <meta name="author" content="Md. Fayezullah" />
+        <link rel="canonical" href="http://127.0.0.1:5500/index.html" />
+        <meta name="robots" content="index, follow" />
+        
+        <!--  Essential Social Meta Tags -->
+        <meta property="og:title" content="My Contact" />
+        <meta property="og:description" content="My Contact practice website" />
+        <meta property="og:image" content="http://127.0.0.1:5500/index.html" />
+        <meta property="og:url" content="http://127.0.0.1:5500/index.html" />
+        <meta property="twitter:card" content="http://127.0.0.1:5500/index.html" />
+        <meta property="og:site_name" content="My Contact" />
+        <meta property="twitter:image:alt" content="My Contact" />
+    </head>
 
 <body style="background-color: gray; margin: 0; padding: 0;">
     <header>
@@ -40,15 +52,19 @@
         </address>
     </section>
 
-    <footer style="background-color: black; color: white; position: fixed; left: 0; bottom: 0; width: 100%;">
+    <footer style="background-color: black; color: white; padding: 20px; ">
         <h3 style="margin-left: 10px; color: white;">Top Links</h3>
-        <ol type="1">
-            <li><a style="text-decoration: none; color: white;" href="index.html">Home</a></li>
-            <li><a style="text-decoration: none; color: white;" href="about.html">About Us</a></li>
-            <li><a style="text-decoration: none; color: white;" href="contact.html">Contact Us</a></li>
-            <li><a style="text-decoration: none; color: white;" href="gallery.html">Gallery</a></li>
-        </ol>
-        <p style="text-align: center;">&copy; 2022 All Right Reserved</p>
+        <nav >
+            <ol type="1" >
+                <li><a style="text-decoration: none; color: white;" href="index.html">Home</a></li>
+                <li><a style="text-decoration: none; color: white;" href="about.html">About Us</a></li>
+                <li><a style="text-decoration: none; color: white;" href="contact.html">Contact Us</a></li>
+                <li><a style="text-decoration: none; color: white;" href="gallery.html">Gallery</a></li>
+                <li><a style="text-decoration: none; color: white;" href="calcolator.html">Calculator</a></li>
+            
+            </ol>
+        </nav>
+        <p style="text-align: center;">&copy; 2022 All Right Reserved.</p>
     </footer>
 </body>
 
