--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>My Class</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="My class practice website" />
-        <meta name="keywords" content="turorial, html, css, seo, php, javascript" />
+        <meta name="keywords" content="tutorial, html, css, seo, php, javascript" />
         <meta name="author" content="Md. Fayezullah" />
         <link rel="canonical" href="http://127.0.0.1:5500/index.html" />
         <meta name="robots" content="index, follow" />
