css flex pactice

--- a/ClassCss/index.html
+++ b/ClassCss/index.html
@@ -35,7 +35,7 @@
                                     <span class="portfolio-alert-num">5</span>
                                 </a></li>
                         </ul>
-                        <a class="menu-bar" href=""><i class="fa-solid fa-bars"></i></a>
+                        <a class="menu-bar" href=""><img src="./image/logo.png" alt=""></a>
                         
                     </div>
                     <div class="clearfix"></div>
@@ -60,7 +60,7 @@
         </header>
          <!-- About Me section start -->
         <section>
-            <div id="about-me" class="content">
+            <div id="about-me" class="content ">
                 <h2>About Me</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nam rerum possimus eaque qui accusamus quaerat ratione soluta placeat tenetur porro, dolore odit iusto, dignissimos necessitatibus praesentium perferendis inventore animi illo alias error? Beatae, ex! Fugit dolore non voluptatem sint.</p>
                 <p>Repellat deserunt quibusdam placeat doloremque esse aliquid, neque, soluta sit rem molestias unde voluptatum officia dolorem itaque provident ducimus, voluptatem magni minima et accusantium asperiores aut nam facere. Dignissimos nesciunt deleniti consequatur alias itaque doloremque dolor maxime recusandae voluptas adipisci?</p>
@@ -78,14 +78,10 @@
         <!-- About Me section end -->
         <!-- Portfolio section start -->
         <section>
-            <div id="portfolio" class="content">
+            <div id="portfolio" class="content text-content">
                 <h2>Portfolio</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique, quo voluptates dolore mollitia perspiciatis accusantium quibusdam repellendus consectetur a sunt optio. Eius, dicta. Necessitatibus quis non ipsa deserunt suscipit odio sint cum dicta repellat aperiam ipsam sit error blanditiis, fugit fuga et repellendus voluptate maxime ducimus aspernatur asperiores nostrum! Praesentium!</p>
-                <p>Optio magni voluptatibus magnam officiis autem ipsa eligendi ad ipsum laudantium qui ut nam doloremque, excepturi fugiat, inventore aperiam in, expedita fugit nulla iusto quibusdam. Iusto, quasi enim cumque magni saepe tenetur, quas tempora tempore pariatur velit molestias minus exercitationem aliquid? Quaerat aperiam, necessitatibus fugiat quos a voluptate ullam totam?</p>
-                <p>Reiciendis eos, debitis nostrum ducimus commodi aliquam officiis deleniti ipsum non molestiae blanditiis in perspiciatis nemo corporis inventore sed at eius asperiores accusantium eum labore. Quod in accusamus autem molestias repellat optio iste similique? Veniam placeat modi provident quas delectus illo ut, quaerat maiores, facere dolorem dignissimos nisi harum nihil.</p>
-                <p>Praesentium id doloremque porro eveniet nihil aliquam quidem laborum veritatis nam at illum ut vel, eos adipisci exercitationem quam. Tempore voluptates fugiat consequuntur voluptatibus deleniti quasi at beatae distinctio accusantium dolor modi vel ratione maxime eligendi delectus molestiae, officiis iusto. Incidunt dolorem omnis obcaecati vel dicta fugiat quasi perferendis dolores!</p>
-                <p>Facilis fuga debitis accusantium, provident vero hic? Repellendus sapiente velit sit temporibus ratione deleniti dolores illum fugiat nam? Nostrum molestiae eum corrupti sequi. Doloribus nemo, adipisci consectetur id numquam pariatur quidem dolorum beatae nisi, soluta obcaecati provident. Harum laudantium sapiente minus perferendis cumque, totam eaque assumenda dolores iure dolor. Doloribus?</p>
-            </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum est ipsam ducimus officia delectus a iusto, quae temporibus quos earum tenetur sunt, sint esse aperiam eveniet aliquam recusandae repellat porro unde quibusdam impedit. Labore placeat saepe corrupti! Repudiandae reprehenderit cum in at eveniet ullam ab perferendis nulla, delectus dolor doloribus architecto cumque vel distinctio deleniti impedit dignissimos illum reiciendis! Excepturi tempore sequi vitae, omnis at iste temporibus quidem eius ab, dignissimos illo minima numquam saepe error autem, enim minus! Voluptate aliquam harum culpa ipsum aperiam deserunt accusantium minima nisi praesentium, possimus modi eveniet quia commodi libero assumenda voluptatum accusamus a et reiciendis? Vitae, possimus! Quibusdam repudiandae enim vero dolorum fugiat? Illo omnis nam natus eveniet, obcaecati molestias voluptatum nulla, aliquam laboriosam accusantium eaque sed mollitia. Consequatur recusandae suscipit sapiente ullam doloremque culpa nesciunt commodi repudiandae nemo nihil quis porro, natus amet ab veniam dolor perspiciatis quaerat atque sequi! Cupiditate inventore culpa ratione quasi, cumque odit quod aliquid repudiandae distinctio. Nam nemo asperiores assumenda nesciunt distinctio, adipisci beatae reiciendis nihil, aliquam minima, vel praesentium! Asperiores exercitationem suscipit dolorem. Earum cupiditate, quae temporibus voluptates voluptatum sit reiciendis itaque expedita necessitatibus beatae saepe et esse nisi unde vero ullam eos, ad dolor a!</p>
+               </div>
         </section>
          <!-- Portfolio section end -->
         <footer></footer>
