--- a/gallery.html
+++ b/gallery.html
@@ -24,6 +24,9 @@
                         gap: 1rem;
                         flex-wrap: wrap;
                 }
+                .flex a {
+                      flex-flow: row-reverse;
+                }
 
                 .clearfix {
                         clear: both;
