--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                     display: flex;
                     gap: 1rem;
                     flex-wrap: wrap;
+                    justify-content: center;
+            }
+            .flex a{
+                
             }
             .clearfix{
                 clear: both;
